--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Birla Institute of Technology and Science</b></h5>
           <span class="w3-tag w3-green">Pilani, Rajasthan</span>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2007 - 2011</h6>
           <p><h4>B.E(Hons) Computer Science</h4></p>
           <hr>
         </div>
@@ -181,7 +181,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Additional Experience and Awards</h2>
          <div class="w3-container">
-        <h4>Awarded “Mantra Innovator of the Year” by BITS Alumni Associate (BITSAA) for year 2011.</h4>
+        <h4>Awarded “Mantra Technical Innovator of the Year” by BITS Alumni Associate (BITSAA) for year 2011.</h4>
         <hr>
         <h4>Successfully completed “Introduction to Artificial Intelligence” under Peter Norvig and Sebastian Thrun, Udacity.</h4>
         </div>
