--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <span class="w3-tag w3-green">Kansas City, MO</span>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
+              <li>Worked extensively on troubleshooting and fixing major internal and external client issues related to performance of application</li>
+              <li>Developed framework for embedding MPages within Orion framework using Ruby on Rails. Used docker for building application. This was pursued as 
+                revenuecycle hackathon project</li>
               <li>Worked on pass-through feature that would use systems credential to automatically login to any iAware applications without asking for additional authentication. </li>
               <li>Designed Message Center notifications feature that would poll for new incoming messages.</li>
               <li>Took initiative of introducing Splunk in the team for analyzing application logs in different domains and proactively logging JIRA and fixing before being reported. This improved team performance tremendously.</li>
