--- a/index.html
+++ b/index.html
@@ -200,7 +200,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p><a href="./adi_resume.pdf" download>Download my resume</a></p>
+  <table style="width:100%">
+    <tr>  
+      <td><p><a href="./adi_resume.pdf" download>Download my resume in PDF</a></p></td>
+      <td><p><a href="./adi_resume.doc" download>Download my resume in Word</a></p></td>
+    </tr>
+  </table>
   <a href="https://www.linkedin.com/in/adityanarain1989/" class="fa fa-linkedin w3-hover-opacity"></a>
   <a href="https://github.com/aditya-narain" class="fa fa-github w3-hover-opacity"></a>
   <a href="https://www.facebook.com/adi.narain" class="fa fa-facebook w3-hover-opacity"></a>
