--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <td><p><a href="./adi_resume.doc" download>Download my resume in Word</a></p></td>
     </tr>
   </table>
-  <a href="https://www.linkedin.com/in/adityanarain1989/" class="fa fa-linkedin w3-hover-opacity"></a>
-  <a href="https://github.com/aditya-narain" class="fa fa-github w3-hover-opacity"></a>
-  <a href="https://www.facebook.com/adi.narain" class="fa fa-facebook w3-hover-opacity"></a>
+  <a href="https://www.linkedin.com/in/adityanarain1989/" class="fa fa-linkedin w3-xlarge w3-hover-opacity"></a>
+  <a href="https://github.com/aditya-narain" class="fa fa-github w3-xlarge w3-hover-opacity"></a>
+  <a href="https://www.facebook.com/adi.narain" class="fa fa-facebook w3-xlarge w3-hover-opacity"></a>
 </footer>
 
 </body>
