--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+1(323) 610-8901</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills and Technologies</b></p>
           <p>Java</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
@@ -47,15 +47,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <p>Docker</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">60%</div>
           </div>
           <p>Machine Learning</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">60%</div>
           </div>
           <p>Cloud Computing</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">60%</div>
           </div>
           <p>My SQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <p>AWS</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">50%</div>
           </div>
           <p>Splunk</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -114,31 +114,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
-    
+
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-bolt fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objective</h2>
+        <div class="w3-container">
+          <p>Collaborative and driven problem solver with <strong>4+ years of Backend development experience</strong> looking for full time opportunities to build and have an impact on unique, valuable, and meaningful products.</p>
+        </div>   
+      </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Associate Senior Software Engineer / Cerner Corporation</b></h5>
           <span class="w3-tag w3-green">Kansas City, MO</span>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
-              <li>Worked extensively on troubleshooting and fixing major internal and external client issues related to performance of application</li>
+              <li>Designed and improved the performance of MPage rendering within Cerner’s Revenue Cycle application by 40% and fixed major security flaws.</li>
+              <li>Designed single instance feature project where an application would launch single instance of another application and would automatically change the patient context when required.</li>
+              <li>Maintaining Central service framework that manages large-scale patient data.</li>
               <li>Developed framework for embedding MPages within Orion framework using Ruby on Rails. Used docker for building application. This was pursued as 
                 revenuecycle hackathon project</li>
               <li>Worked on pass-through feature that would use systems credential to automatically login to any iAware applications without asking for additional authentication. </li>
               <li>Designed Message Center notifications feature that would poll for new incoming messages.</li>
               <li>Took initiative of introducing Splunk in the team for analyzing application logs in different domains and proactively logging JIRA and fixing before being reported. This improved team performance tremendously.</li>
-            </ul>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Engineer / Cerner Corporation</b></h5>
-          <span class="w3-tag w3-green">Kansas City, MO</span>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2014 - Oct 2017</h6>
-            <ul>
-                <li>Designed and improved the performance of MPage rendering within Cerner’s Revenue Cycle application by 40% and fixed major security flaws.</li>
-                <li>Designed single instance feature project where an application would launch single instance of another application and would automatically change the patient context when required.</li>
-                <li>Maintaining Central service framework that manages large-scale patient data.</li>
+              <li>Worked extensively on troubleshooting and fixing major internal and external client issues related to performance of application</li>
             </ul>
           <hr>
         </div>
@@ -178,15 +176,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2007 - 2011</h6>
           <p><h4>B.E(Hons) Computer Science</h4></p>
           <hr>
-        </div>
-      </div>
-
-      <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Additional Experience and Awards</h2>
-         <div class="w3-container">
-        <h4>Awarded “Mantra Technical Innovator of the Year” by BITS Alumni Associate (BITSAA) for year 2011.</h4>
-        <hr>
-        <h4>Successfully completed “Introduction to Artificial Intelligence” under Peter Norvig and Sebastian Thrun, Udacity.</h4>
         </div>
       </div>
 
