--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <span class="w3-tag w3-green">Kansas City, MO</span>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
+              <li>Improved performance of launching Revenue Cycle application by more than 50% with parallel processing</li>
               <li>Designed and improved the performance of MPage rendering within Cerner’s Revenue Cycle application by 40% and fixed major security flaws.</li>
               <li>Designed single instance feature project where an application would launch single instance of another application and would automatically change the patient context when required.</li>
               <li>Maintaining Central service framework that manages large-scale patient data.</li>
