Updated index file and updated image

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="./adi_pic.jpg" style="width:100%" alt="Avatar">
+          <img src="./adi_pic.jpg" style="width:60%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-white">
             <h2>Aditya Narain</h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Associate Senior Software Engineer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Kansas City, KS</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer II</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Boston, MA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mailto:anarain1989@gmail.com">anarain1989@gmail.com</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+1(323) 610-8901</p>
           <hr>
@@ -38,6 +38,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Java</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+          </div>
+          <p>PHP</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
           <p>Ruby</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -56,6 +60,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Cloud Computing</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
+          <p>Kafka</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
           </div>
           <p>My SQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -122,15 +130,26 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-bolt fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objective</h2>
         <div class="w3-container">
-          <p>Collaborative and driven problem solver with <strong>4+ years of Backend development experience</strong> looking for full time opportunities to build and have an impact on unique, valuable, and meaningful products.</p>
+          <p>Collaborative and driven problem solver with <strong>5+ years of Backend development experience</strong> looking for full time opportunities to build and have an impact on unique, valuable, and meaningful products.</p>
         </div>   
       </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Software Engineer II / Wayfair</b></h5>
+          <span class="w3-tag w3-green">Boston, MA</span>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+            <ul>
+              <li>Works on Delivery Experience team mainly engaged in crafting emails/sms to the consumer after they order for better consumer experience.</li>
+            </ul>
+          <hr>
+        </div>
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <div class="w3-container">
           <h5 class="w3-opacity"><b>Associate Senior Software Engineer / Cerner Corporation</b></h5>
           <span class="w3-tag w3-green">Kansas City, MO</span>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - May 2019</span></h6>
             <ul>
               <li>Improved performance of launching Revenue Cycle application by more than 50% with parallel processing</li>
               <li>Designed and improved the performance of MPage rendering within Cerner’s Revenue Cycle application by 40% and fixed major security flaws.</li>
