--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
-          <p>Machine Learning</p>
+          <p>Graph QL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
@@ -138,9 +138,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Software Engineer II / Wayfair</b></h5>
           <span class="w3-tag w3-green">Boston, MA</span>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
-              <li>Works on Delivery Experience team mainly engaged in crafting emails/sms to the consumer after they order for better consumer experience.</li>
+              <li>Working as Backend engineer in the Customer Assurance team where our aim is reduce customer contacts by sending them timely communication via emails and sms.</li>
+              <li> Lead initiative to refactor sms architecture code to make it more reusable, testable and follow proper design pattern.</li>
+              <li> Lead OKR to reduce ship confirm sms errors and reduced errors by 99.9% . This is high impact project that was achieved in Q32019. </li>
+              <li> Lead a high priority project for migrating orderconfirm email to Java creating micro services with Spring Boot. The application was containerized (with Docker) and deployed the image on Kubernetes. Created helm charts to manage k8s application.</li>
+              <li>Pro-actively created RUM(Realtime user monitoring) with Grafana dashboards for java microservices.</li>
+              <li> Actively participating in Critical rotations and monitors kibana logs and configuring Datadog alerts when required for ensuring no new errors are introduced. </li>
+              <li>Actively participating in Code Reviews and ensuring the health and standard of the code.</li>
             </ul>
           <hr>
         </div>
