Updated resume for adi

--- a/index.html
+++ b/index.html
@@ -43,19 +43,33 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
-          <p>Ruby</p>
+          <p>Javascript(ES2015)</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">
-              <div class="w3-center w3-text-white">40%</div>
-            </div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
+          <p>React</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
           <p>Docker</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
+          <p>Kubernetes</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
           <p>Graph QL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
+          <p>Apollo (Server & Client)</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
+          <p>Apache solr</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">40%</div>
           </div>
           <p>Cloud Computing</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -77,9 +91,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
-          <p>AWS</p>
+          <p>Kibana</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
+          </div>
+          <p>Grafana</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
           </div>
           <p>Splunk</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -92,14 +110,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>RCP</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-          </div>
-          <p>HTML5</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-          </div>
-          <p>XML/XSD</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
           </div>
           <p>Git</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -130,28 +140,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-bolt fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objective</h2>
         <div class="w3-container">
-          <p>Collaborative and driven problem solver with <strong>5+ years of Backend development experience</strong> looking for full time opportunities to build and have an impact on unique, valuable, and meaningful products.</p>
+          <p>Collaborative and driven problem solver with <strong>6+ years of Backend development experience</strong> looking for full time opportunities to build and have an impact on unique, valuable, and meaningful products.</p>
         </div>   
       </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Engineer II / Wayfair</b></h5>
+          <h5 class="w3-opacity"><b>Software Engineer / Wayfair</b></h5>
           <span class="w3-tag w3-green">Boston, MA</span>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
-              <li>Working as Backend engineer in the Customer Assurance team where our aim is reduce customer contacts by sending them timely communication via emails and sms.</li>
-              <li> Lead initiative to refactor sms architecture code to make it more reusable, testable and follow proper design pattern.</li>
-              <li> Lead OKR to reduce ship confirm sms errors and reduced errors by 99.9% . This is high impact project that was achieved in Q32019. </li>
-              <li> Lead a high priority project for migrating orderconfirm email to Java creating micro services with Spring Boot. The application was containerized (with Docker) and deployed the image on Kubernetes. Created helm charts to manage k8s application.</li>
+              <li>Working as <Strong>Full Stack Engineer</Strong> in Buyers Remorse team where our aim is to reduce CPO by designing an interactive and intuitive cancellation and returns feature.</li>
+              <li>Worked as <Strong>Lead Backend engineer</Strong> in the Customer Assurance team where our aim is reduce customer contacts by sending them timely communication via emails and sms.</li>
+              <li>Lead initiative to refactor sms architecture code to make it more reusable, testable and follow proper design pattern.</li>
+              <li>Lead OKR to reduce ship confirm sms errors and reduced errors by 99.9% . This is high impact project that was achieved in Q32019. </li>
+              <li>Lead a high priority project for migrating orderconfirm email to Java creating micro services with Spring Boot. The application was containerized (with Docker) and deployed the image on Kubernetes. Created helm charts to manage k8s application.</li>
               <li>Pro-actively created RUM(Realtime user monitoring) with Grafana dashboards for java microservices.</li>
-              <li> Actively participating in Critical rotations and monitors kibana logs and configuring Datadog alerts when required for ensuring no new errors are introduced. </li>
+              <li>Actively participating in Critical rotations and monitors kibana logs and configuring Datadog alerts when required for ensuring no new errors are introduced. </li>
               <li>Actively participating in Code Reviews and ensuring the health and standard of the code.</li>
             </ul>
           <hr>
         </div>
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+    
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Associate Senior Software Engineer / Cerner Corporation</b></h5>
           <span class="w3-tag w3-green">Kansas City, MO</span>
