--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
+          <p>Redis</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
+          <p>Aerospike</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+          </div>
           <p>Apache solr</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">40%</div>
@@ -92,6 +100,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
           <p>Kibana</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
+          </div>
+          <p>Datadog</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
           </div>
@@ -155,7 +167,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <li>Lead initiative to refactor sms architecture code to make it more reusable, testable and follow proper design pattern.</li>
               <li>Lead OKR to reduce ship confirm sms errors and reduced errors by 99.9% . This is high impact project that was achieved in Q32019. </li>
               <li>Lead a high priority project for migrating orderconfirm email to Java creating micro services with Spring Boot. The application was containerized (with Docker) and deployed the image on Kubernetes. Created helm charts to manage k8s application.</li>
-              <li>Pro-actively created RUM(Realtime user monitoring) with Grafana dashboards for java microservices.</li>
+              <li>Pro-actively created RUM(Realtime user monitoring) with Grafana and Datadog dashboards for java microservices.</li>
               <li>Actively participating in Critical rotations and monitors kibana logs and configuring Datadog alerts when required for ensuring no new errors are introduced. </li>
               <li>Actively participating in Code Reviews and ensuring the health and standard of the code.</li>
             </ul>
