--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Engineer / Wayfair</b></h5>
+          <h5 class="w3-opacity"><b>Senior Software Engineer| Tech Lead / Wayfair</b></h5>
           <span class="w3-tag w3-green">Boston, MA</span>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
-              <li>Working as <Strong>Full Stack Engineer</Strong> in Buyers Remorse team where our aim is to reduce CPO by designing an interactive and intuitive cancellation and returns feature.</li>
+              <li>Working as <Strong>Lead Full Stack Engineer</Strong> in Buyers Remorse team where our aim is to reduce CPO by designing an interactive and intuitive cancellation and returns feature.</li>
               <li>Worked as <Strong>Lead Backend engineer</Strong> in the Customer Assurance team where our aim is reduce customer contacts by sending them timely communication via emails and sms.</li>
               <li>Lead initiative to refactor sms architecture code to make it more reusable, testable and follow proper design pattern.</li>
               <li>Lead OKR to reduce ship confirm sms errors and reduced errors by 99.9% . This is high impact project that was achieved in Q32019. </li>
