--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
             </div>
-            <p>Javascript(ES2015)</p>
+            <p>Typescript</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
             </div>
@@ -61,33 +61,37 @@
             </div>
             <p>Docker</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
             </div>
             <p>Kubernetes</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+            </div>
+            <p>Istio</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
             </div>
             <p>Graph QL</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+            </div>
+            <p>Google Cloud Platform (GCP)</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
             </div>
             <p>Apollo (Server & Client)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
             </div>
-            <p>Redis</p>
+            <p>Data Build Tool (DBT)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+            </div>
+            <p>Airflow</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
             </div>
             <p>Aerospike</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-            </div>
-            <p>Apache solr</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">40%</div>
-            </div>
-            <p>Cloud Computing</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
             </div>
@@ -95,39 +99,23 @@
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
             </div>
-            <p>My SQL</p>
+            <p>My SQL and GBQ</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
             </div>
-            <p>Websphere</p>
+            <p>Kibana</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
             </div>
-            <p>Heroku</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-            </div>
-            <p>Kibana</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
-            </div>
             <p>Datadog</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
             </div>
             <p>Grafana</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
             </div>
             <p>Splunk</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
-            </div>
-            <p>Linux</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
-            </div>
-            <p>RCP</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
             </div>
@@ -157,8 +145,8 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-bolt fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objective</h2>
           <div class="w3-container">
-            <p>As a Tech Lead with over <strong>10 years of experience</strong> specializing in backend development and
-              4+ years in full-stack roles, I bring a proven track record of success in guiding and leading software
+            <p>As a Tech Lead with over <strong>10+ years of experience</strong> specializing in backend development and
+              5+ years in full-stack roles, I bring a proven track record of success in guiding and leading software
               engineering teams. Proficient in
               Java, Php,GraphQL,Kafka, TypeScript, and React, I excel in designing and implementing scalable solutions
               while effectively collaborating with cross-functional teams.
@@ -176,23 +164,36 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
             <ul>
-              <li>As a <Strong>Tech Lead Full Stack Engineer</Strong> in the post-order team, I strive to enhance the
-                customer experience by ensuring a smooth and effortless process for any modifications to orders after
-                they have been placed.</li>
-              <li>Worked as <Strong>Lead Backend engineer</Strong> in the Customer Assurance team where our aim was to
-                reduce customer contacts by sending them timely communication via emails and sms.</li>
-              <li>Lead initiative to refactor sms architecture code to make it more reusable, testable and follow proper
-                design pattern.</li>
-              <li>Lead OKR to reduce ship confirm sms errors and reduced errors by 99.9% . This is high impact project
-                that was achieved in Q32019. </li>
-              <li>Lead a high priority project for migrating orderconfirm email to Java creating micro services with
-                Spring Boot. The application was containerized (with Docker) and deployed the image on Kubernetes.
-                Created helm charts to manage k8s application.</li>
-              <li>Pro-actively created RUM(Realtime user monitoring) with Grafana and Datadog dashboards for java
-                microservices.</li>
-              <li>Actively participating in Critical rotations and monitors kibana logs and configuring Datadog alerts
-                when required for ensuring no new errors are introduced. </li>
-              <li>Actively participating in Code Reviews and ensuring the health and standard of the code.</li>
+              <li>As a <strong>Technical Lead Full Stack Engineer</strong> in the post-order team, I lead and enhanced
+                the
+                workflow platform, enabling customers and agents to seamlessly handle post-order issues such as
+                cancellations, buyer's
+                remorse, shipping address changes, and delivery method modifications.</li>
+
+              <li>Worked as a <strong>Lead Backend Engineer</strong> in the Customer Assurance team, driving key
+                initiatives to
+                reduce customer contacts by delivering proactive and timely communications via emails and SMS.</li>
+
+              <li>Led the integration of workflow platforms into Partner Home, eliminating dependency on agents for
+                issue resolution and
+                empowering suppliers to provide assistance, replacement parts, and discounts directly.</li>
+
+              <li>Optimized the returns workflow, reducing operational costs and saving Wayfair <strong>~$3.8M</strong>
+                by waiving return shipping
+                fees for store credit mattress returns.</li>
+
+              <li>Architected and migrated support ticketing to a dedicated subgraph, improving system scalability,
+                modularity, and
+                operational efficiency across teams.</li>
+
+              <li>Enhanced payment workflows by integrating with payment gateway platforms (Stripe and Braintree),
+                streamlining refund and transaction-heavy processes, and improving customer payment experiences.</li>
+
+              <li>Implemented real-time observability enhancements, including Datadog logging and dashboards, improving
+                issue tracking, debugging efficiency, and workflow stability.</li>
+
+              <li>Mentored junior engineers, led knowledge-sharing sessions, and contributed to team growth by
+                conducting engineering interviews and reviewing RFCs.</li>
             </ul>
             <hr>
           </div>
@@ -202,8 +203,9 @@
             <span class="w3-tag w3-green">Kansas City, MO</span>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2014 - May 2019</span></h6>
             <ul>
-              <li>Improved performance of launching Revenue Cycle application by more than 50% with parallel processing
-              </li>
+              <li>Boosted the performance of the Revenue Cycle application by over 50% through parallel processing,
+                significantly
+                improving load times.</li>
               <li>Designed and improved the performance of MPage rendering within Cerner’s Revenue Cycle application by
                 40% and fixed major security flaws.</li>
               <li>Designed single instance feature project where an application would launch single instance of another
